[package]
name = "handmade_hero"
version = "0.1.0"
authors = ["FateXii <rambane.t.r@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "winnt","memoryapi","windef","libloaderapi","winuser","impl-default", "winerror","impl-debug", "xinput", "dsound", "guiddef", "minwindef","profileapi", "mmreg", "wingdi", "unknwnbase", "ntdef", "debugapi"] }
