[package]
name = "handmade_hero"
version = "0.1.0"
authors = ["Thendo Rambane <rambane.t.r@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.windows]
version =   "0.39"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader"
]
